--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/storm/Videos/postgresql-9.4.1208.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
