--- a/.classpath
+++ b/.classpath
@@ -23,5 +23,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/home/storm/Videos/postgresql-9.4.1208.jar"/>
+	<classpathentry kind="lib" path="/home/storm/Music/org.apache.commons.dbcp.jar"/>
+	<classpathentry kind="lib" path="/home/storm/Music/org.apache.commons.pool.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
